--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                 <div class="ellipse"></div>
                 <strong>Email & Phone</strong>
               </li>
-              <li id="car_selection">
+              <li id="car_selection" class="d-none d-sm-block">
                 <div class="ellipse"></div>
                 <strong>Car Selection</strong>
               </li>
-              <li id="submit_app">
+              <li id="submit_app" class="d-none d-sm-block">
                 <div class="ellipse"></div>
                 <strong>Submit Application</strong>
               </li>
@@ -93,7 +93,7 @@
               <div class="card-body">
                 <div class="form-content">
                   <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-sm-6">
                       <div class="form-floating mb-3">
                         <input
                           type="text"
@@ -104,7 +104,7 @@
                         <label for="floatingInput">First Name</label>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-sm-6">
                       <div class="form-floating mb-3">
                         <input
                           type="text"
@@ -115,7 +115,7 @@
                         <label for="floatingInput">Last Name</label>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-sm-6">
                       <div class="form-floating mb-3">
                         <select class="form-select" id="floatingSelect">
                           <option value="0" selected>Single</option>
@@ -126,7 +126,7 @@
                         <label for="floatingSelect">Marital status</label>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-sm-6">
                       <div class="form-floating mb-3">
                         <input
                           type="date"
@@ -148,7 +148,7 @@
                         <label for="floatingInput">Home Address</label>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-sm-6">
                       <div class="form-floating mb-3">
                         <input
                           type="text"
@@ -173,7 +173,7 @@
               <div class="card-body">
                 <div class="form-content">
                   <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-sm-6">
                       <div class="form-floating mb-3">
                         <input
                           type="text"
@@ -184,7 +184,7 @@
                         <label for="floatingInput">Employer Name</label>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-sm-6">
                       <div class="form-floating mb-3">
                         <input
                           type="text"
@@ -195,7 +195,7 @@
                         <label for="floatingInput">Job Title</label>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-sm-6">
                       <div class="form-floating mb-3">
                         <input
                           type="number"
@@ -206,7 +206,7 @@
                         <label for="floatingInput">Monthly Income</label>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-sm-6">
                       <div class="form-floating mb-3">
                         <input
                           type="text"
@@ -237,7 +237,7 @@
               <div class="card-body">
                 <div class="form-content">
                   <div class="row">
-                    <div class="col-4 mb-2">
+                    <div class="col-7 col-sm-4 mb-2">
                       <div class="form-floating mb-3">
                         <input
                           type="email"
@@ -251,7 +251,7 @@
                         <label for="floatingInput">Email</label>
                       </div>
                     </div>
-                    <div class="col-3 mb-2">
+                    <div class="col-5 mb-2">
                       <div class="form-floating mb-3">
                         <input
                           type="password"
@@ -259,18 +259,15 @@
                           id="floatingInput"
                           placeholder="Verification Code"
                         />
-                        <small class="text-muted float-end"
-                          >Re-send SMS Code</small
-                        >
                         <label for="floatingInput">Verification Code</label>
                       </div>
                     </div>
-                    <div class="col-5 mb-2">
+                    <div class="col-12 col-sm-4 mb-2">
                       <button class="btn btn-lg btn-warning w-100">
                         Send Email Code
                       </button>
                     </div>
-                    <div class="col-4">
+                    <div class="col-7 col-sm-4">
                       <div class="form-floating mb-3">
                         <input
                           type="text"
@@ -279,9 +276,12 @@
                           placeholder="Phone number"
                         />
                         <label for="floatingInput">Phone number</label>
+                        <small class="text-muted float-end"
+                          >Re-send SMS Code</small
+                        >
                       </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-5">
                       <div class="form-floating mb-3">
                         <input
                           type="password"
@@ -292,7 +292,7 @@
                         <label for="floatingInput">Verification Code</label>
                       </div>
                     </div>
-                    <div class="col-5">
+                    <div class="col-12 col-sm-4">
                       <button class="btn btn-lg btn-warning w-100">
                         Send SMS Code
                       </button>
@@ -320,17 +320,17 @@
                     <div class="col-12">
                       <h3 style="text-align: start">Choose Car Preference</h3>
                     </div>
-                    <div class="containter" style="padding: 0 10%">
+                    <div class="containter car-pref-container">
                       <div class="row">
-                        <div class="col-3 car-pref">
+                        <div class="col-6 col-sm-3 car-pref">
                           <img src="./assets/images/sedan.svg" alt="" />
                           <p>Best Sedans</p>
                         </div>
-                        <div class="col-3 car-pref">
+                        <div class="col-6 col-sm-3 car-pref">
                           <img src="./assets/images/sedan.svg" alt="" />
                           <p>Best Sedans</p>
                         </div>
-                        <div class="col-3 car-pref">
+                        <div class="col-3 car-pref d-none d-sm-block">
                           <img src="./assets/images/sedan.svg" alt="" />
                           <p>Best Sedans</p>
                         </div>
@@ -340,12 +340,12 @@
                       <h3 style="text-align: start">Choose Brand Preference</h3>
                     </div>
                     <div class="row">
-                      <div class="col-3">
+                      <div class="col-6 col-sm-3">
                         <div class="car-box">
                           <img src="./assets/images/hyundai-logo.svg" alt="" />
                         </div>
                       </div>
-                      <div class="col-3">
+                      <div class="col-6 col-sm-3">
                         <div class="car-box">
                           <img
                             src="./assets/images/volkswagen-logo.svg"
@@ -353,7 +353,7 @@
                           />
                         </div>
                       </div>
-                      <div class="col-3">
+                      <div class="col-6 col-sm-3">
                         <div class="car-box">
                           <img
                             src="./assets/images/ford.svg"
@@ -362,27 +362,27 @@
                           />
                         </div>
                       </div>
-                      <div class="col-3">
+                      <div class="col-6 col-sm-3">
                         <div class="car-box">
                           <img src="./assets/images/honda.svg" alt="" />
                         </div>
                       </div>
-                      <div class="col-3">
+                      <div class="col-3 d-none d-sm-block">
                         <div class="car-box">
                           <img src="./assets/images/peugot.svg" alt="" />
                         </div>
                       </div>
-                      <div class="col-3">
+                      <div class="col-3 d-none d-sm-block">
                         <div class="car-box">
                           <img src="./assets/images/tesla.svg" alt="" />
                         </div>
                       </div>
-                      <div class="col-3">
+                      <div class="col-3 d-none d-sm-block">
                         <div class="car-box">
                           <img src="./assets/images/volvo.svg" alt="" />
                         </div>
                       </div>
-                      <div class="col-3">
+                      <div class="col-3 d-none d-sm-block">
                         <div class="car-box">
                           <img src="./assets/images/renault.svg" alt="" />
                         </div>
